Fix small screen squish

--- a/client/css/_songs.scss
+++ b/client/css/_songs.scss
@@ -42,6 +42,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+
+  @media screen and (max-width: 660px) {
+    width: auto;
+  }
 }
 
 .song i {
